--- a/docs/daily-study/2021-12.md
+++ b/docs/daily-study/2021-12.md
@@ -1,9 +1,9 @@
 ---
-title: "【日常学习记录】2021-12"
+title: "【技术月刊】2021-12"
 date: 2021-12-22
 sidebar: "auto"
 categories:
-  - daily-study
+  - 技术月刊
 tags:
 ---
 
