--- a/docs/daily-study/2022-01.md
+++ b/docs/daily-study/2022-01.md
@@ -1,9 +1,9 @@
 ---
-title: "【日常学习记录】2021-01"
+title: "【技术月刊】2021-01"
 date: 2022-01-22
 sidebar: true
 categories:
-  - daily-study
+  - 技术月刊
 ---
 
 <!-- more -->
