--- a/docs/daily-study/2022-02.md
+++ b/docs/daily-study/2022-02.md
@@ -1,13 +1,10 @@
 ---
-title: "【日常学习记录】2022-02"
+title: "【技术月刊】2022-02"
 date: 2022-02-22
 sidebar: "auto"
 categories:
-  - daily-study
-tags:
+  - 技术月刊
 ---
-
-<!-- more -->
 
 ## 2022-02-10
 
